--- a/saya.html
+++ b/saya.html
@@ -43,7 +43,7 @@
 		<!-- bagian konten Blog -->
 		<div class="blog">
 			<div class="conteudo">
-				<img class="gbr" src="gambar/Saya.png">
+				<img class="gbr" src="gambar/saya.png">
 				<h1 align="center"> DIDIK DARMAWAN </h1>
 				<hr>
 				<p align="center">
